<resources>
    <string name="app_name" translatable="false">Go Music</string>

    <string name="banner_1">ca-app-pub-2858093115841936/7850467415</string>

    <string name="home_interstial">ca-app-pub-2858093115841936/5443247189</string>
    <string name="video_interstial">ca-app-pub-2858093115841936/2871750703</string>

    <string name="video_ad">ca-app-pub-2858093115841936/1372140235</string>

    <string name="by" translatable="true">by  </string>

    <string name="defaultTime"> 00:00</string>

    <string name="unkown_artist" translatable="true">unknown artist</string>

    <string name="search">Search</string>
    <string name="Songs" translatable="true">Track</string>
    <string name="Videos" translatable="true">Videos</string>
    <string name="Album" translatable="true">Album</string>
    <string name="Artist" translatable="true">Artist</string>
    <string name="streaming" translatable="true">Mixtape</string>

    <string name="Set_successfully" translatable="true">Set successfully</string>

    <string name="facebook_application_id" translatable="false">// Replace with your Facebook App ID</string>

    <string name="delete_text" translatable="true">Delete</string>
    <string name="sure_to_delete" translatable="true">Are you sure to delete:</string>
    <string name="deleted" translatable="true">Successfully  Deleted</string>
    <string name="share_song_file" translatable="true">Share with…</string>
    <string name="ok" translatable="true">OK</string>
    <string name="todo" translatable="false">TODO</string>

    <string name="denied" translatable="true">Permission denied.</string>
    <string name="retry" translatable="true">Retry</string>

    <string name="cancel" translatable="true">Cancel</string>

    <string name="what_s_on_your_mind" translatable="true">What\'s on your mind ?</string>
    <string name="let_your_friends_know_what_you_re_listening_to">Let your friends know what you\'re listening to.</string>
    <string name="connect" translatable="true">CONNECT</string>
    <string name="yeah" translatable="true">Share</string>

    <string name="default_notification_channel_id">CHANNEL_ID</string>
    <string name="fcm_message" translatable="true">New update available for download.</string>

    <string name="make_ringtone" translatable="true">Make Ringtone</string>
    <string name="play_next" translatable="true">Play   Next</string>


    <string name="no_network" translatable="true">No Network</string>

    <string name="listening" translatable="true">LISTENING To  - </string>
    <string name="theme">Theme</string>


    <string name="drawer_open">drawer open</string>
    <string name="drawer_closed">drawer closed</string>
    <string name="setting">Setting</string>
    <string name="sign_in">Sign in</string>
    <string name="header">Join the community to share,\n know and download songs</string>
    <string name="facebook">Continue with Facebook</string>
    <string name="google">Continue with Google</string>
    <string name="signout">Sign-Out</string>
    <string name="subscribe_now">SUBSCRIBE NOW</string>
    <string name="privacy_policy">Privacy policy</string>

    <string name="privacy_policy_note">God\'s Love inc built the GO Music app as a Free app. This SERVICE is provided by God\'s Love inc at no cost and is intended for use as is.

This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.

\n\nIf you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at GO Music unless otherwise defined in this Privacy Policy.

\n\nInformation Collection and Use

For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to Email, Phone number, Facebook Profile and other details, Advertising ID,. The information that I request will be retained on your device and is not collected by me in any way.

The app does use third party services that may collect information used to identify you.

\n\nI want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.

Cookies

Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.

\n\nThis Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.

Service Providers

I may employ third-party companies and individuals due to the following reasons:

\n\nTo facilitate our Service;
To provide the Service on our behalf;
To perform Service-related services; or
To assist us in analyzing how our Service is used.
I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.

\n\nI value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.

This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

\n\nThese Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.

\n\n

I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.

Contact Us

If you have any questions or suggestions about my Privacy Policy, do not hesitate to drop a feedback at the feedback section. Thank you.</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_hint">Please describe your problems or suggestions</string>
    <string name="enter_name_hint">Please input your full name</string>
    <string name="name_">Name:</string>
    <string name="submit">Submit</string>
    <string name="feedback_submitted">Feedback Submitted!</string>

</resources>
