<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:orientation="vertical"
    android:background="@drawable/alert_dialog_custom_style"
    android:padding="10dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:minHeight="220dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.0">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:layout_marginStart="10.0dip">

            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="20.0sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_text"
                android:layout_marginStart="10.0dip" />

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="18.0sp"
            android:textColor="@color/black"
            android:id="@+id/delete_song_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:layout_marginStart="20.0dip"
            android:layout_marginEnd="20.0dip" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:background="@drawable/button_00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_gravity="center"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_close"
                android:layout_weight="0.0"
                android:contentDescription="@string/todo"
                android:paddingStart="10dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_gravity="end"
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textAlignment="textEnd"
                style="?android:buttonBarButtonStyle" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:background="@drawable/button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_gravity="center"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_trash"
                android:layout_weight="0"
                android:contentDescription="@string/todo"
                android:layout_marginStart="10dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_gravity="end"
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textAlignment="center"
                style="?android:buttonBarButtonStyle" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>