<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:scrollbars="none"
    android:background="?attr/backgroundColor"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/dismiss"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_close"
                android:layout_marginTop="10dp"/>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_gravity="center"
            android:background="?attr/backgroundColor"
            app:cardCornerRadius="5dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="30dp"
                android:background="?attr/backgroundColor">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:textColor="?attr/textColor"
                        android:layout_marginBottom="30dp"
                        android:layout_marginTop="60dp"/>


                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/textColor"
                        android:text="@string/header"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_marginBottom="20dp"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="1dp"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"
                        app:cardCornerRadius="10dp"
                        app:cardBackgroundColor="@color/dark">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_marginStart="30dp"
                                android:src="@drawable/googleg_standard_color_18" />

                            <Button
                                android:id="@+id/btnGoogle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/trans"
                                android:text="@string/google"
                                android:textAlignment="center"
                                android:textAllCaps="false"
                                android:textSize="15sp"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </androidx.cardview.widget.CardView>


                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/curved_edge_facebook_bg"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="30dp"
                            android:src="@drawable/com_facebook_button_icon" />

                        <Button
                            android:id="@+id/btnFacebook"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/trans"
                            android:text="@string/facebook"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/sign_in_progress"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:visibility="gone"/>

        </androidx.cardview.widget.CardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>